# YearPredict

./: .gitignore  CMakeLists.txt  README.md  ann.ipynb  ann.py  download.sh  knn.results  loader.py  network2.py  reproduce.ipynb  requirements.txt
ANN/: ann.ipynb  loader.py  network2.py  results.txt  results_5epochs.txt
ANN/CroppedData/NN_90yrs/: ann.ipynb  loader.py
ANN/CroppedData/NN_decades/: ann.ipynb  loader.py
ANN/FullData/NN_decades/: ann.ipynb  loader.py  network3.py  theano.ipynb
FullData/NN_90yrs/: loader.py
KNN/: knn.ipynb  knn.results
NN_90yrs/: ann.ipynb  network2.py
SVM/: README.md  ans.txt  range  result.txt
SVM/src/: Transform.cpp  main.cpp  testHyperparam.cpp
Setup/: CropData.ipynb  download.sh
svm/: CMakeLists.txt
svm/src/: Transform.cpp  main.cpp
